Provisions for COE CV

--- a/pubs.bib
+++ b/pubs.bib
@@ -17,69 +17,84 @@ selected   :: Selected papers
 @inproceedings{xu2024rela,
   title={Relational Network Verification},
   author={Xieyang Xu and Yifei Yuan and Zachary Kincaid and Arvind Krishnamurthy and Ratul Mahajan and David Walker and Ennan Zhai},
-  booktitle={SIGCOMM},
+  booktitle={ACM SIGCOMM},
   month={Aug},
   year={2024},
   topics={protocols},
   URL={papers/sigcomm2024-rela.pdf},
   acceptancerate={17},
   resource={<a href=https://github.com/alibaba/rela>Code</a>},
-  impact={yes},
+  ={yes},
+  pages={213-227},
+  citations={0},
+  pubtype={conference},
 }
 
 @inproceedings{johnson2024flm,
   title={Sequence Abstractions for Flexible, Line-Rate Network Monitoring},
   author={Andrew Johnson and Ryan Beckett and Xiaoqi Chen and Ratul Mahajan and David Walker},
-  booktitle={NSDI},
+  booktitle={USENIX NSDI},
   month={Apr},
   year={2024},
   topics={protocols},
   URL={papers/nsdi2024-flm.pdf},
   acceptancerate={18},
   resource={<a href=https://github.com/PrincetonUniversity/lucid/tree/SpecRegex>Code</a>},
+  pages={1593-1620},
+  citations={0},
+  pubtype={conference},
 }
 
 @comment{---------------------2023---------------------}
 
 
-@inproceedings{zhu2023meshinsight,
+@inproceedings{zhu2023adn,
   title={Application Defined Networking},
-  author={Xiangfeng Zhu and Weixin Deng and Banruo Liu and Jingrong Chen and Yongji Wu and Tom Anderson and Arvind Krishnamurthy and Ratul Mahajan and Danyang Zhu},
-  booktitle={HotNets},
+  author={Xiangfeng Zhu and Weixin Deng and Banruo Liu and Jingrong Chen and Yongji Wu and Tom Anderson and Arvind Krishnamurthy and Ratul Mahajan and Danyang Zhuo},
+  booktitle={ACM HotNets},
   month={Nov},
   year={2023},
   topics={appnets},
   URL={papers/hotnets2023-adn.pdf},
   acceptancerate={28},
+  pages={87-94},
+  citations={4},
+  pubtype={workshop},
 }
 
 @inproceedings{zhu2023meshinsight,
   title={Dissecting Overheads of Service Mesh Sidecars},
   author={Xiangfeng Zhu and Guozhen She and Bowen Xue and Yu Zhang and Yongsu Zhang and Xuan Kelvin Zou and XiongChun Duan and Peng He and Arvind Krishnamurthy and Matthew Lentz and Danyang Zhuo and Ratul Mahajan},
-  booktitle={SoCC},
+  booktitle={ACM SoCC},
   month={Oct},
   year={2023},
   topics={appnets},
   URL={papers/socc2023-meshinsight.pdf},
   acceptancerate={31},
   resource={<a href=https://github.com/UWNetworksLab/meshinsight>Code and documentation</a>},
+  pages={142-157},
+  citations={21},
+  pubtype={conference},
 }
 
 @inproceedings{chugh2023sia,
   title={Anticipatory Resource Allocation for ML Training},
   author={Tapan Chugh and Srikanth Kandula and Arvind Krishnamurthy and Ratul Mahajan and Ishai Menache},
-  booktitle={SoCC},
+  booktitle={ACM SoCC},
   month={Oct},
   year={2023},
   topics={appnets},
   URL={papers/socc2023-sia.pdf},
   acceptancerate={31},
+  pages={410-426},
+  citations={1},
+  pubtype={conference},
 }
 
 @inproceedings{brown2023batfish,
   title={Lessons from the evolution of the Batfish configuration analysis tool},
   author={Matt Brown and Ari Fogel and Daniel Halperin and Victor Heohiardi and Ratul Mahajan and Todd Millstein},
-  booktitle={SIGCOMM},
+  booktitle={ACM SIGCOMM},
   month={Sep},
   year={2023},
   topics={protocols},
@@ -87,19 +102,25 @@ selected   :: Selected papers
   acceptancerate={22},
   resource={<a href=https://github.com/batfish>Code and documentation</a>},
   impact={yes},
+  pages={122-135},
+  citations={14},
+  pubtype={conference},
 }
 
 
 @inproceedings{xu2023netcov,
   title={Test coverage metrics for network configurations},
   author={Xieyang Xu and Weixin Deng and Ryan Beckett and Ratul Mahajan and David Walker},
-  booktitle={NSDI},
+  booktitle={USENIX NSDI},
   month={Apr},
   year={2023},
   topics={protocols},
   URL={papers/nsdi2023-netcov.pdf},
   acceptancerate={16},
   resource={<a href=https://github.com/UWNetworksLab/netcov>Code and documentation</a>},
+  pages={1717-1732},
+  citations={3},
+  pubtype={conference},
 }
 
 
@@ -108,13 +129,16 @@ selected   :: Selected papers
 @inproceedings{xu2021yardstick,
   title={Test coverage metrics for the network},
   author={Xieyang Xu and Ryan Beckett and Karthick Jayaraman and Ratul Mahajan and David Walker},
-  booktitle={SIGCOMM},
+  booktitle={ACM SIGCOMM},
   month={Aug},
   year={2021},
   topics={protocols},
   URL={papers/sigcomm2021-yardstick.pdf},
   acceptancerate={23},
   impact={yes},
+  pages={775-787},
+  citations={6},
+  pubtype={conference},
 }
 
 
@@ -123,36 +147,30 @@ selected   :: Selected papers
 @inproceedings{beckett2020shapeshifter,
   title={Abstract interpretation of distributed network control planes},
   author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
-  booktitle={POPL},
+  booktitle={ACM POPL},
   month={Nov},
   year={2020},
   topics={protocols},
   URL={papers/popl2020-shapeshifter.pdf},
   acceptancerate={27},
+  pages={1-27},
+  citations={50},
+  pubtype={conference},
 }
 
 @inproceedings{beckett2020zen,
   title={A general framework for compositional network modeling},
   author={Ryan Beckett and Ratul Mahajan},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   month={Nov},
   year={2020},
   topics={protocols},
   URL={papers/hotnets2020-zen.pdf},
   acceptancerate={25},
   impact={yes},
-}
-
-
-@inproceedings{beckett2020shapeshifter,
-  title={Efficient verification of network fault tolerance via counterexample-guided refinement},
-  author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
-  booktitle={POPL},
-  month={Jan},
-  year={2020},
-  topics={protocols},
-  URL={papers/popl2020-shapeshifter.pdf},
-  acceptancerate={27},
+  pages={8-15},
+  citations={16},
+  pubtype={workshop},
 }
 
 @comment{---------------------2019---------------------}
@@ -160,24 +178,30 @@ selected   :: Selected papers
 @inproceedings{beckett2019putting,
   title={Putting network verification to good use},
   author={Ryan Beckett and Ratul Mahajan},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   month={Nov},
   year={2019},
   topics={protocols},
   URL={papers/hotnets2019-putting.pdf},
   acceptancerate={20},
+  pages={77-84},
+  citations={7},
+  pubtype={workshop},
 }
 
 @inproceedings{beckett2019bonsai,
   title={Efficient verification of network fault tolerance via counterexample-guided refinement},
   author={Nick Giannarakis and Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
-  booktitle={CAV},
+  booktitle={International Conference on Computer Aided Verification (CAV)},
   month={Jul},
   year={2019},
   topics={protocols},
   URL={papers/cav2019-origami.pdf},
   resource={<a href=papers/cav2019-origami-full.pdf>Extended version with proofs</a>},
   acceptancerate={26},
+  pages={305-323},
+  citations={19},
+  pubtype={conference},
 }
 
 
@@ -193,10 +217,13 @@ selected   :: Selected papers
   URL={papers/sigcomm2018-bonsai.pdf},
   resource={<a href=https://arxiv.org/pdf/1806.08744.pdf>Extended version with proofs</a>},
   acceptancerate={18},
+  pages={476-489},
+  citations={77},
+  pubtype={conference},
 }
 
 @inproceedings{calder2018odin,
-  title={Odin: {Microsoft’s} Scalable Fault-Tolerant {CDN} Measurement System},
+  title={Odin: {Microsoft's} Scalable Fault-Tolerant {CDN} Measurement System},
   author={Matt Calder and Manuel Schroder and Ryan Gao and Ryan Stewart and Jitendra Padhye and Ratul Mahajan and Ganesh Ananthanarayanan and Ethan Katz-Bassett},
   booktitle={USENIX NSDI},
   month={Apr},
@@ -205,19 +232,25 @@ selected   :: Selected papers
   URL={papers/nsdi2018-odin.pdf},
   acceptancerate={16},
   impact={yes},
+  pages={501-517},
+  citations={62},
+  pubtype={conference},
 }
 
 @comment{---------------------2017---------------------}
 
 @inproceedings{gember-jackson2017cpr,
   title={Automatically Repairing Network Control Planes Using an Abstract Representation},
-  author={Aaron Gember-Jacobson and Aditya Akella and Ratul Mahajan and Hongqiang Harry Liu},
+  author={Aaron Gember-Jacobson and Aditya Akella and Ratul Mahajan and Hongqiang Liu},
   booktitle={ACM SOSP},
   month={Oct},
   year={2017},
   topics={protocols},
   URL={papers/sosp2017-cpr.pdf},
   acceptancerate={16},
+  pages={359-373},
+  citations={59},
+  pubtype={conference},
 }
 
 @inproceedings{beckett2017mineweeper,
@@ -229,6 +262,9 @@ selected   :: Selected papers
   topics={protocols},
   URL={papers/sigcomm2017-minesweeper.pdf},
   acceptancerate={14},
+  pages={155-168},
+  citations={295},
+  pubtype={conference},
 }
 
 @inproceedings{zhuo2017rail,
@@ -240,6 +276,9 @@ selected   :: Selected papers
   topics={optical},
   URL={papers/sigcomm2017-corropt.pdf},
   acceptancerate={14},
+  pages={362-375},
+  citations={91},
+  pubtype={conference},
 }
 
 @inproceedings{beckett2017propane,
@@ -251,6 +290,9 @@ selected   :: Selected papers
   topics={protocols},
   URL={papers/pldi2017-propaneat.pdf},
   acceptancerate={15},
+  pages={437-451},
+  citations={70},
+  pubtype={conference},
 }
 
 @inproceedings{zhuo2017rail,
@@ -262,6 +304,9 @@ selected   :: Selected papers
   topics={optical},
   URL={papers/nsdi2017-rail.pdf},
   acceptancerate={18},
+  pages={561-576},
+  citations={22},
+  pubtype={conference},
 }
 
 
@@ -276,7 +321,10 @@ selected   :: Selected papers
   topics={optical},
   URL={papers/imc2016-opticalfailures.pdf},
   note={Best Dataset Award},
-  acceptancerate={26}
+  acceptancerate={26},
+  pages={461-467},
+  citations={78},
+  pubtype={conference},
 }
 
 @inproceedings{fayaz2016efficient,
@@ -287,7 +335,10 @@ selected   :: Selected papers
   year={2016},
   topics={protocols},
   URL={papers/osdi2016-era.pdf},
-  acceptancerate={18}
+  acceptancerate={18},
+  pages={217-232},
+  citations={284},
+  pubtype={conference},
 }
 
 @inproceedings{bjorner2016ddnf,
@@ -298,7 +349,10 @@ selected   :: Selected papers
   year={2016},
   topics={protocols},
   URL={papers/hvc2016-ddnf.pdf},
-  note={Best Paper Award}
+  note={Best Paper Award},
+  pages={49-64},
+  citations={44},
+  pubtype={conference},
 }
 
 @inproceedings{beckett2016dont,
@@ -311,6 +365,9 @@ selected   :: Selected papers
   topics={protocols},
   URL={papers/sigcomm2016-propane.pdf},
   acceptancerate={17},
+  pages={328-341},
+  citations={178},
+  pubtype={conference},
 }
 
 @inproceedings{ghobadi2016projector,
@@ -322,6 +379,9 @@ selected   :: Selected papers
   topics={optical},
   URL={papers/sigcomm2016-projector.pdf},
   acceptancerate={17},
+  pages={216-229},
+  citations={372},
+  pubtype={conference},
 }
 
 @inproceedings{gember-jackson2016fast,
@@ -333,6 +393,9 @@ selected   :: Selected papers
   topics={protocols},
   URL={papers/sigcomm2016-arc.pdf},
   acceptancerate={17},
+  pages={300-313},
+  citations={188},
+  pubtype={conference},
 }
 
 @inproceedings{shen2016beam,
@@ -344,6 +407,9 @@ selected   :: Selected papers
   topics={home},
   URL={papers/atc2016-beam.pdf},
   acceptancerate={18},
+  pages={143-157},
+  citations={35},
+  pubtype={conference},
 }
 
 @article{filer2016elastic,
@@ -356,6 +422,9 @@ selected   :: Selected papers
   volume={8},
   number={7},
   URL={papers/jocn2016-elastic-optical-networks.pdf},
+  pages={A45-A54},
+  citations={98},
+  pubtype={journal},
 }
 
 @inproceedings{forster2016consistent,
@@ -368,22 +437,28 @@ selected   :: Selected papers
   note={Selected for forwarding to the IFIP TC6 journal Open Transactions on Communication Systems},
   URL={papers/networking2016-consistentupdates.pdf},
   acceptancerate={17},
+  pages={1-9},
+  citations={99},
+  pubtype={conference},
 }
 
 @inproceedings{ghobadi2016evaluation,
   title={Evaluation of elastic modulation gains in {Microsoft’s} optical backbone in {North America}},
   author={Monia Ghobadi and Jamie Gaudette and Ratul Mahajan and Amar Phanishayee and Buddy Klinkers and Daniel Kilper},
   month={Mar},
-  booktitle={The Optical Fiber Communication Conferene and Exhibition (OFC)},
+  booktitle={The Optical Fiber Communication Conference and Exhibition (OFC)},
   year={2016},
   topics={optical},
   URL={papers/ofc2016-bvt.pdf},
   impact={yes},
+  pages={1-3},
+  citations={29},
+  pubtype={conference},
 }
 
 @inproceedings{liu2016efficiently,
   title={Efficiently delivering online services over integrated infrastructure},
-  author={Hongqiang Harry Liu and Raajay Viswanathan and Matt Calder and Aditya Akella and Ratul Mahajan and Jitendra Padhye and Ming Zhang},
+  author={Hongqiang Liu and Raajay Viswanathan and Matt Calder and Aditya Akella and Ratul Mahajan and Jitendra Padhye and Ming Zhang},
   booktitle={USENIX NSDI},
   month={Mar},
   year={2016},
@@ -392,6 +467,9 @@ selected   :: Selected papers
   resource={<a href=papers/tr2016-footprint.pdf>Technical report</a>},
   acceptancerate={20},
   impact={yes},
+  pages={77-90},
+  citations={62},
+  pubtype={conference},
 }
 
 
@@ -406,6 +484,9 @@ selected   :: Selected papers
 	topics={misc},
 	URL={papers/imc2015-mpa.pdf},
   acceptancerate={25},
+  pages={395-408},
+  citations={37},
+  pubtype={conference},
 }
 
 @inproceedings{calder2015analyzing,
@@ -418,6 +499,9 @@ selected   :: Selected papers
 	URL={papers/imc2015-anycast.pdf},
   acceptancerate={25},
   impact={yes},
+  pages={531-537},
+  citations={177},
+  pubtype={conference},
 }
 
 @inproceedings{zhu2015packet,
@@ -430,6 +514,9 @@ selected   :: Selected papers
   URL={papers/sigcomm2015-everflow.pdf},
   acceptancerate={15},
   impact={yes},
+  pages={479-491},
+  citations={414},
+  pubtype={conference},
 }
 
 @techreport{zeng2015measuring,
@@ -441,6 +528,8 @@ selected   :: Selected papers
   topics={diagnosis},
   URL={papers/tr2015-netsonar.pdf},
   impact={yes},
+  citations={19},
+  pubtype={technical-report},
 }
 
 @inproceedings{croft2015systematically,
@@ -452,6 +541,9 @@ selected   :: Selected papers
   topics={protocols},
   URL={papers/atc2015-delorean.pdf},
   acceptancerate={16},
+  pages={165-176},
+  citations={23},
+  pubtype={conference},
 }
 
 @inproceedings{singh2014case,
@@ -463,6 +555,8 @@ selected   :: Selected papers
   topics={home},
   URL={papers/hotos2015-beam.pdf},
   acceptancerate={32},
+  citations={2},
+  pubtype={workshop},
 }
 
 @inproceedings{fogel2015general,
@@ -475,6 +569,9 @@ selected   :: Selected papers
   topics={protocols},
   acceptancerate={20},
   impact={yes},
+  pages={469-483},
+  citations={340},
+  pubtype={conference},
 }
 
 @inproceedings{pedrosa2015analyzing,
@@ -486,6 +583,9 @@ selected   :: Selected papers
   URL={papers/nsdi2015-pic.pdf},
   topics={protocols},
   acceptancerate={20},
+  pages={485-498},
+  citations={47},
+  pubtype={conference},
 }
 
 @comment{---------------------2014---------------------}
@@ -493,12 +593,14 @@ selected   :: Selected papers
 @inproceedings{akella2014call,
   author={Aditya Akella and Ratul Mahajan},
   title={A call to arms for management plane analytics},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   month={Nov},
   year={2014},
   URL={papers/hotnets2014-mgmtanalytics.pdf},
   topics={misc} ,
   acceptancerate={22},
+  citations={6},
+  pubtype={workshop},
 }
 
 @inproceedings{chu2014strack,
@@ -510,10 +612,13 @@ selected   :: Selected papers
   URL={papers/mm2014-strack.pdf},
   topics={home},
   acceptancerate={20},
+  pages={837-840},
+  citations={17},
+  pubtype={conference},
 }
 
 @inproceedings{liu2014traffic,
-  author={Hongqiang Harry Liu and Srikanth Kandula and Ratul Mahajan and Ming Zhang and David Gelernter},
+  author={Hongqiang Liu and Srikanth Kandula and Ratul Mahajan and Ming Zhang and David Gelernter},
   title={Traffic engineering with forward fault correction},
   month={Aug},
   booktitle={ACM SIGCOMM},
@@ -523,10 +628,13 @@ selected   :: Selected papers
   topics={sdn},
   acceptancerate={19},
   impact={yes},
+  pages={527-538},
+  citations={226},
+  pubtype={conference},
 }
 
 @inproceedings{jin2014dynamic,
-   author={Xin Jin and Hongqiang Harry Liu and Rohan Gandhi and Srikanth Kandula and Ratul Mahajan and Ming Zhang and Jennifer Rexford and Roger Wattenhofer},
+   author={Xin Jin and Hongqiang Liu and Rohan Gandhi and Srikanth Kandula and Ratul Mahajan and Ming Zhang and Jennifer Rexford and Roger Wattenhofer},
    title={Dynamic scheduling of network updates},
    booktitle={ACM SIGCOMM},
    month={Aug},
@@ -535,6 +643,9 @@ selected   :: Selected papers
    resource={<a href=papers/tr2014-dionysus.pdf>Extended version</a>},
    topics={sdn},
   acceptancerate={19},
+  pages={539-550},
+  citations={511},
+  pubtype={conference},
 }
 
 @inproceedings{sun2014network,
@@ -547,6 +658,9 @@ selected   :: Selected papers
    topics={sdn},
    acceptancerate={19},
   impact={yes},
+  pages={563-574},
+  citations={117},
+  pubtype={conference},
 }
 
 @inproceedings{mysore2014gestalt,
@@ -559,6 +673,9 @@ selected   :: Selected papers
    URL={papers/atc2014-gestalt.pdf},
    resource={<a href=papers/tr2013-gestalt.pdf>Technical report</a>},
    acceptancerate={18},
+   pages={255-267},
+   citations={46},
+  pubtype={conference},
 }
 
 @inproceedings{gupta2014bolt,
@@ -570,6 +687,9 @@ selected   :: Selected papers
   topics={home},
   URL={papers/nsdi2014-bolt.pdf},
   acceptancerate={18},
+  pages={243-256},
+  citations={74},
+  pubtype={conference},
 }
 
 @comment{---------------------2013---------------------}
@@ -577,13 +697,15 @@ selected   :: Selected papers
 @inproceedings{mahajan2013consistent,
   title={On consistent updates in software-defined networks},
   author={Ratul Mahajan and Roger Wattenhofer},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   month={Nov},
   year={2013},
   topics={sdn},
   URL={papers/hotnets2013-sdnupdates.pdf},
   resource={<a href=papers/tr2013-sdnupdates.pdf>Extended version</a>},
   acceptancerate={24},
+  citations={226},
+  pubtype={workshop},
 }
 
 @inproceedings{ravindranath2012appinsight,
@@ -595,6 +717,9 @@ selected   :: Selected papers
   topics={mobile},
   URL={papers/sosp2013-timecard.pdf},
   acceptancerate={19},
+  pages={85-100},
+  citations={85},
+  pubtype={conference},
 }
 
 @inproceedings{gupta2013towards,
@@ -605,6 +730,8 @@ selected   :: Selected papers
   year={2013},
   topics={home},
   URL={papers/ladis2013-bolt.pdf},
+  citations={3},
+  pubtype={workshop},
 }
 
 @inproceedings{hong2013achieving,
@@ -618,6 +745,9 @@ selected   :: Selected papers
   resource={<a href=papers/tr2013-swan.pdf>Extended version</a>},
   acceptancerate={16},
   impact={yes},
+  pages={15-26},
+  citations={1469},
+  pubtype={conference},
 }
 
 @inproceedings{chen2013provider,
@@ -630,6 +760,9 @@ selected   :: Selected papers
   URL={papers/sigcomm2013-srt.pdf},
   acceptancerate={16},
   impact={yes},
+  pages={243-254},
+  citations={105},
+  pubtype={conference},
 }
 
 @inproceedings{bao2013case,
@@ -641,6 +774,8 @@ selected   :: Selected papers
   topics={mobile},
   URL={papers/hotmobile2013-psycomp.pdf},
   acceptancerate={31},
+  citations={24},
+  pubtype={workshop},
 }
 
 @inproceedings{brush2013digital,
@@ -652,6 +787,9 @@ selected   :: Selected papers
   topics={home},
   URL={papers/cscw2013-dnw.pdf},
   acceptancerate={35},
+  pages={693-700},
+  citations={72},
+  pubtype={conference},
 }
 
 @comment{---------------------2012---------------------}
@@ -667,6 +805,9 @@ selected   :: Selected papers
   URL={papers/osdi2012-appinsight.pdf},
   acceptancerate={12},
   impact={yes},
+  pages={107-120},
+  citations={276},
+  pubtype={conference},
 }
 
 
@@ -677,7 +818,10 @@ selected   :: Selected papers
   month={Oct},
   year={2012},
   topics={home},
-  URL={papers/homesys2012-homelab.pdf}
+  URL={papers/homesys2012-homelab.pdf},
+  pages={1108-1113},
+  citations={53},
+  pubtype={workshop},
 }
 
 @inproceedings{mahajan2012high,
@@ -690,6 +834,9 @@ selected   :: Selected papers
   URL={papers/usenix2012-pluribus.pdf},
   resource={<a href=papers/tr2009-pluribus.pdf>Extended version</a>},
   acceptancerate={14},
+  pages={237-248},
+  citations={30},
+  pubtype={conference},
 }
 
 @inproceedings{dixon2012operating,
@@ -702,6 +849,9 @@ selected   :: Selected papers
   URL={papers/nsdi2012-homeos.pdf},
   acceptancerate={18},
   impact={yes},
+  pages={337-354},
+  citations={364},
+  pubtype={conference},
 }
 
 
@@ -717,6 +867,9 @@ selected   :: Selected papers
   URL={papers/imc2011-mpls-latency.pdf},
   acceptancerate={19},
   impact={yes},
+  pages={463-472},
+  citations={68},
+  pubtype={conference},
 }
 
 @inproceedings{kothari2011finding,
@@ -728,6 +881,9 @@ selected   :: Selected papers
   topics={protocols},
   URL={papers/sigcomm2011-max.pdf},
   acceptancerate={14},
+  pages={26-37},
+  citations={98},
+  pubtype={conference},
 }
 
 @inproceedings{amershi2011human,
@@ -738,7 +894,10 @@ selected   :: Selected papers
   year={2011},
   note={Selected for the Best Papers Track},
   topics={diagnosis},
-  URL={papers/ijcai2011-cuet.pdf}
+  URL={papers/ijcai2011-cuet.pdf},
+  pages={2564-2569},
+  citations={26},
+  pubtype={conference},
 }
 
 @article{keith2011advancing,
@@ -750,7 +909,10 @@ selected   :: Selected papers
   month={Jun},
   year={2011},
   topics={home},
-  URL={papers/cacm2011-advancing-home.pdf}
+  URL={papers/cacm2011-advancing-home.pdf},
+  pages={62-71},
+  citations={84},
+  pubtype={journal},
 }
 
 @inproceedings{falaki2011systemsens,
@@ -762,6 +924,8 @@ selected   :: Selected papers
   topics={mobile},
   URL={papers/mobiarch2011-systemsens.pdf},
   acceptancerate={50},
+  citations={1},
+  pubtype={workshop},
 }
 
 @inproceedings{amershi2011cuet,
@@ -774,6 +938,9 @@ selected   :: Selected papers
   topics={diagnosis},
   URL={papers/chi2011-cuet.pdf},
   acceptancerate={26},
+  pages={157-166},
+  citations={67},
+  pubtype={conference},
 }
 
 @inproceedings{brush2011home,
@@ -785,6 +952,9 @@ selected   :: Selected papers
   topics={home},
   URL={papers/chi2011-homeos.pdf},
   acceptancerate={26},
+  pages={2115-2124},
+  citations={674},
+  pubtype={conference},
 }
 
 @comment{-----------------------2010-----------------}
@@ -792,23 +962,27 @@ selected   :: Selected papers
 @inproceedings{dixon2010home,
   title={The home needs an operating system (and an app store)},
   author={Colin Dixon and Ratul Mahajan and Sharad Agarwal and AJ Brush and Bongshin Lee and Stefan Saroiu and Paramvir Bahl},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   month={Oct},
   year={2010},
   topics={home},
   URL={papers/hotnets2010-homeos.pdf},
   acceptancerate={21},
+  citations={108},
+  pubtype={workshop},
 }
 
 @inproceedings{agarwal2010diagnosing,
   title={There's an app for that, but it doesn't work. Diagnosing mobile applications in the wild},
   author={Sharad Agarwal and Ratul Mahajan and Alice Zheng and Paramvir Bahl},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   month={Oct},
   year={2010},
   topics={mobile},
   URL={papers/hotnets2010-mobibug.pdf},
   acceptancerate={21},
+  citations={23},
+  pubtype={workshop},
 }
 
 @inproceedings{falaki2010first,
@@ -820,6 +994,9 @@ selected   :: Selected papers
   topics={mobile},
   URL={papers/imc2010-smartphone-traffic.pdf},
   acceptancerate={22},
+  pages={281-287},
+  citations={593},
+  pubtype={conference},
 }
 
 @inproceedings{liu2010netclinic,
@@ -832,6 +1009,9 @@ selected   :: Selected papers
   URL={papers/vast2010-netclinic.pdf},
   note={Selected for forwarding to Information Visualization journal},
   acceptancerate={28},
+  pages={131-138},
+  citations={27},
+  pubtype={conference},
 }
 
 @inproceedings{mcsherry2010differentially,
@@ -843,6 +1023,9 @@ selected   :: Selected papers
   topics={misc},
   URL={papers/sigcomm2010-privacy.pdf},
   acceptancerate={12},
+  pages={123-134},
+  citations={182},
+  pubtype={conference},
 }
 
 @inproceedings{balasubramanian2010augmenting,
@@ -854,6 +1037,9 @@ selected   :: Selected papers
   topics={mobile},
   URL={papers/mobisys2010-wiffler.pdf},
   acceptancerate={20},
+  pages={209-222},
+  citations={884},
+  pubtype={conference},
 }
 
 @inproceedings{falaki2010diversity,
@@ -865,6 +1051,9 @@ selected   :: Selected papers
   topics={mobile},
   URL={papers/mobisys2010-diversity.pdf},
   acceptancerate={20},
+  pages={179-194},
+  citations={1214},
+  pubtype={conference},
 }
 
 @inproceedings{dischinger2010glasnost,
@@ -876,6 +1065,9 @@ selected   :: Selected papers
   topics={astronomy},
   URL={papers/nsdi2010-glasnost.pdf},
   acceptancerate={19},
+  pages={405-418},
+  citations={217},
+  pubtype={conference},
 }
 
 @inproceedings{zhang2010optimizing,
@@ -887,6 +1079,9 @@ selected   :: Selected papers
   topics={sdn},
   URL={papers/nsdi2010-entact.pdf},
   acceptancerate={17},
+  pages={33-48},
+  citations={165},
+  pubtype={conference},
 }
 
 @misc{mahajan2010build,
@@ -897,7 +1092,10 @@ selected   :: Selected papers
   year={2010},
   topics={misc},
   URL={papers/ccr2010-howto.pdf},
-  resource={<a href=talks/keynote-conext-2009.pptx>CoNext keynote</a>}
+  resource={<a href=talks/keynote-conext-2009.pptx>CoNext keynote</a>},
+  pages={60-65},
+  citations={4},
+  pubtype={invited},
 }
 
 @comment{-------------------2009------------------}
@@ -911,6 +1109,9 @@ selected   :: Selected papers
   topics={astronomy},
   URL={papers/imc2009-broom.pdf},
   acceptancerate={22},
+  pages={156-169},
+  citations={26},
+  pubtype={conference},
 }
 
 @inproceedings{kandula2009detailed,
@@ -923,6 +1124,9 @@ selected   :: Selected papers
   URL={papers/sigcomm2009-netmedic.pdf},
   resource={<a href=talks/sigcomm2009-netmedic.pptx>SIGCOMM talk</a>},
   acceptancerate={10},
+  pages={243-254},
+  citations={285},
+  pubtype={conference},
 }
 
 @techreport{raghavendra2009wi,
@@ -932,7 +1136,9 @@ selected   :: Selected papers
   year={2009},
   howpublished={MSR technical report MSR-2009-108},
   topics={wireless},
-  URL={papers/tr2009-wifi-underutilized.pdf}
+  URL={papers/tr2009-wifi-underutilized.pdf},
+  citations={31},
+  pubtype={technical-report},
 }
 
 @comment{-----------------------2008------------------}
@@ -942,11 +1148,13 @@ selected   :: Selected papers
   author={Milan Stanojevic and Ratul Mahajan and Todd Millstein and Madan Musuvathi},
   month={Oct},
   year={2008},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   topics={protocols},
   URL={papers/hotnets2008-gullibility.pdf},
   resource={<a href=talks/hotnets2008-gullibility.pptx>HotNets talk</a>},
   acceptancerate={20},
+  citations={14},
+  pubtype={workshop},
 }
 
 @inproceedings{mahajan2008eat,
@@ -954,11 +1162,13 @@ selected   :: Selected papers
   author={Ratul Mahajan and Jitendra Padhye and Ramya Raghavendra and Brian Zill},
   month={Oct},
   year={2008},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   topics={misc},
   URL={papers/hotnets2008-buffet.pdf},
   resource={<a href=talks/hotnets2008-buffet.pptx>HotNets talk</a>},
   acceptancerate={20},
+  citations={18},
+  pubtype={workshop},
 }
 
 @inproceedings{balasubramanian2008interactive,
@@ -972,6 +1182,9 @@ selected   :: Selected papers
   resource={<a href=papers/tr2008-vifi.pdf>Extended version</a>},
   acceptancerate={12},
   impact={yes},
+  pages={427-438},
+  citations={342},
+  pubtype={conference},
 }
 
 @inproceedings{chandra2008case,
@@ -983,6 +1196,9 @@ selected   :: Selected papers
   topics={wireless},
   URL={papers/sigcomm2008-cwidth.pdf},
   acceptancerate={12},
+  pages={135-146},
+  citations={392},
+  pubtype={conference},
 }
 
 @inproceedings{li2008predictable,
@@ -994,6 +1210,9 @@ selected   :: Selected papers
   topics={wireless},
   URL={papers/sigcomm2008-predopt.pdf},
   acceptancerate={12},
+  pages={413-426},
+  citations={96},
+  pubtype={conference},
 }
 
 @inproceedings{mahajan2008uncovering,
@@ -1005,6 +1224,9 @@ selected   :: Selected papers
   topics={astronomy},
   URL={papers/nsdi2008-netdiff.pdf},
   acceptancerate={17},
+  pages={205-218},
+  citations={96},
+  pubtype={conference},
 }
 
 @comment{-------------------------2007---------------------}
@@ -1015,11 +1237,13 @@ selected   :: Selected papers
   author={Yi Li and Lili Qiu and Yin Zhang and Ratul Mahajan and Zifei Zhong and Gaurav Deshpande and Eric Rozner},
   month={Nov},
   year={2007},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   topics={wireless},
   URL={papers/hotnets2007-interference-routing.pdf},
   resource={<a href=talks/hotnets2007-interference.pptx>HotNets talk</a>},
   acceptancerate={18},
+  citations={24},
+  pubtype={workshop},
 }
 
 @inproceedings{mahajan2007understanding,
@@ -1033,6 +1257,9 @@ selected   :: Selected papers
   resource={<a href=talks/imc2007-vanlan.pptx>IMC talk</a>},
   acceptancerate={28},
   impact={yes},
+  pages={321-326},
+  citations={143},
+  pubtype={conference},
 }
 
 @inproceedings{qiu2007general,
@@ -1044,6 +1271,9 @@ selected   :: Selected papers
   topics={wireless},
   URL={papers/mobicom2007-interference-model.pdf},
   acceptancerate={11},
+  pages={171-182},
+  citations={289},
+  pubtype={conference},
 }
 
 @inproceedings{mahajan2007mutually,
@@ -1056,6 +1286,9 @@ selected   :: Selected papers
   URL={papers/nsdi2007-wiser.pdf},
   resource={<a href=talks/nsdi2007-wiser.ppt>NSDI talk</a> | <a href=talks/nanog2006-wiser.ppt>NANOG 37 talk</a>},
   acceptancerate={24},
+  pages={355-368},
+  citations={56},
+  pubtype={conference},
 }
 
 @comment{---------------------------2006--------------------}
@@ -1071,6 +1304,9 @@ selected   :: Selected papers
   URL={papers/sigcomm2006-wit.pdf},
   resource={<a href=talks/sigcomm2006-wit.ppt>SIGCOMM talk</a>},
   acceptancerate={12},
+  pages={75-86},
+  citations={272},
+  pubtype={conference},
 }
 
 @inproceedings{reis2006measurement,
@@ -1082,16 +1318,21 @@ selected   :: Selected papers
   topics={wireless},
   URL={papers/sigcomm2006-interference.pdf},
   acceptancerate={12},
+  pages={51-62},
+  citations={493},
+  pubtype={conference},
 }
 
 @misc{mahajan2006polytheistic,
   title={A polytheistic approach to securing interdomain routing},
   author={Ratul Mahajan},
   howpublished={WIRED workshop (invited position paper)},
+  month={July},
   year={2006},
   topics={incentives},
   URL={papers/wired2006-polytheistic.pdf},
-  resource={<a href=talks/wired2006-poly.ppt>WIRED talk</a>}
+  resource={<a href=talks/wired2006-poly.ppt>WIRED talk</a>},
+  pubtype={invited},
 }
 
 
@@ -1100,10 +1341,13 @@ selected   :: Selected papers
 @misc{mahajan2005practical,
   title={Practical and efficient internet routing with competing interests},
   author={Ratul Mahajan},
+  month={Dec},
   year={2005},
   howpublished={PhD Thesis},
   topics={incentives},
-  URL={papers/thesis.pdf}
+  URL={papers/thesis.pdf},
+  citations={11},
+  pubtype={other},
 }
 
 @inproceedings{rodrig2005measurement,
@@ -1113,7 +1357,9 @@ selected   :: Selected papers
   month={Aug},
   year={2005},
   topics={wireless},
-  URL={papers/ewind2005-hotspot.pdf}
+  URL={papers/ewind2005-hotspot.pdf},
+  citations={2},
+  pubtype={workshop},
 }
 
 @inproceedings{mahajan2005sustaining,
@@ -1125,6 +1371,9 @@ selected   :: Selected papers
   topics={incentives},
   URL={papers/nsdi2005-catch.pdf},
   acceptancerate={22},
+  pages={231-244},
+  citations={191},
+  pubtype={conference},
 }
 
 @inproceedings{mahajan2005negotiation,
@@ -1137,6 +1386,9 @@ selected   :: Selected papers
   URL={papers/nsdi2005-nexit.pdf},
   resource={<a href=talks/nanog2004-nexit.pdf>NANOG 31 talk</a>},
   acceptancerate={22},
+  pages={29-42},
+  citations={146},
+  pubtype={conference},
 }
 
 
@@ -1145,13 +1397,15 @@ selected   :: Selected papers
 @inproceedings{mahajan2004towards,
   title={Towards coordinated interdomain traffic engineering},
   author={Ratul Mahajan and David Wetherall and Tom Anderson},
-  booktitle={HotNets},
+  booktitle={ACM HotNets},
   month={Nov},
   year={2004},
   topics={incentives},
   URL={papers/hotnets2004-tearch.pdf},
   resource={<a href=talks/hotnets2004-tearch.pdf>HotNets talk</a>},
   acceptancerate={19},
+  citations={53},
+  pubtype={workshop},
 }
 
 @inproceedings{mahajan2004experiences,
@@ -1161,7 +1415,10 @@ selected   :: Selected papers
   month={Sep},
   year={2004},
   topics={incentives},
-  URL={papers/pins2004-gt.pdf}
+  URL={papers/pins2004-gt.pdf},
+  pages={183-190},
+  citations={109},
+  pubtype={workshop},
 }
 
 @article{spring2004measuring,
@@ -1175,6 +1432,9 @@ selected   :: Selected papers
   note={William R. Bennett Prize},
   topics={astronomy},
   URL={papers/ton2004-rocketfuel.pdf},
+  pages={2-16},
+  citations={1087},
+  pubtype={journal},
 }
 
 
@@ -1191,6 +1451,9 @@ selected   :: Selected papers
   resource={<a href=talks/sosp2003-tulip.pdf>SOSP talk</a> | <a href=talks/nanog2004-tulip.pdf>NANOG 31 talk<a/>},
   acceptancerate={17},
   impact={yes},
+  pages={106-119},
+  citations={244},
+  pubtype={conference},
 }
 
 @inproceedings{spring2003quantifying,
@@ -1202,6 +1465,9 @@ selected   :: Selected papers
   topics={astronomy},
   URL={papers/sigcomm2003-inflation.pdf},
   acceptancerate={10},
+  pages={113-124},
+  citations={341},
+  pubtype={conference},
 }
 
 @inproceedings{jain2003study,
@@ -1213,6 +1479,8 @@ selected   :: Selected papers
   topics={misc},
   URL={papers/usits2003-dhts.pdf},
   acceptancerate={28},
+  citations={85},
+  pubtype={conference},
 }
 
 @inproceedings{mahajan2003controlling,
@@ -1225,16 +1493,21 @@ selected   :: Selected papers
   URL={papers/iptps03-reliability.pdf},
   resource={<a href=talks/iptps03-reliability.pdf>IPTPS talk</a>},
   acceptancerate={16},
+  pages={21-32},
+  citations={229},
+  pubtype={workshop},
 }
 
 @misc{mahajan2003negotiation,
   title={Negotiation-based routing},
   author={Ratul Mahajan},
   howpublished={WIRED workshop (invited position paper)},
+  month={July},
   year={2003},
   topics={incentives},
   URL={papers/wired2003-negotiation.pdf},
-  resource={<a href=talks/wired2003-negotiation.pdf>WIRED talk</a>}
+  resource={<a href=talks/wired2003-negotiation.pdf>WIRED talk</a>},
+  pubtype={invited},
 }
 
 
@@ -1243,13 +1516,16 @@ selected   :: Selected papers
 @inproceedings{mahajan2002inferring,
   title={Inferring link weights using end-to-end measurements},
   author={Ratul Mahajan and Neil Spring and David Wetherall and Tom Anderson},
-  booktitle={Workshop on Internet measurment (IMW)},
+  booktitle={Workshop on Internet measurement (IMW)},
   month={Nov},
   year={2002},
   topics={astronomy},
   URL={papers/imw2002-weights.pdf},
   resource={<a href=talks/imw2002-weights.pdf>IMW talk</a>},
   acceptancerate={24},
+  pages={231-236},
+  citations={305},
+  pubtype={workshop},
 }
 
 @inproceedings{spring2002measuring,
@@ -1263,6 +1539,9 @@ selected   :: Selected papers
   URL={papers/sigcomm2002-rocketfuel.pdf},
   resource={<a href=talks/ipam02-rocketfuel.pdf>IPAM talk</a>},
   acceptancerate={8},
+  pages={133-145},
+  citations={1926},
+  pubtype={conference},
 }
 
 @inproceedings{mahajan2002understanding,
@@ -1275,6 +1554,9 @@ selected   :: Selected papers
   URL={papers/sigcomm2002-misconfigs.pdf},
   resource={<a href=talks/sigcomm2002-misconfigs.pdf>SIGCOMM talk</a>},
   impact={yes},
+  pages={3-16},
+  citations={819},
+  pubtype={conference},
 }
 
 @inproceedings{mahajan2002controlling,
@@ -1286,7 +1568,10 @@ selected   :: Selected papers
   volume={32},
   number={3},
   topics={misc},
-  URL={papers/ccr2002-pushback.pdf}
+  URL={papers/ccr2002-pushback.pdf},
+  pages={62-73},
+  citations={1152},
+  pubtype={journal},
 }
 
 @inproceedings{jain2002translating,
@@ -1296,7 +1581,10 @@ selected   :: Selected papers
   month={May},
   year={2002},
   topics={misc},
-  URL={papers/www2002-xslt.pdf}
+  URL={papers/www2002-xslt.pdf},
+  pages={616-626},
+  citations={63},
+  pubtype={conference},
 }
 
 @techreport{jain2002scalable,
@@ -1306,7 +1594,9 @@ selected   :: Selected papers
   year={2002},
   howpublished={UW-CSE Technical report},
   topics={misc},
-  URL={papers/tr2002-kudos.pdf}
+  URL={papers/tr2002-kudos.pdf},
+  citations={77},
+  pubtype={technical-report},
 }
 
 
@@ -1322,6 +1612,9 @@ selected   :: Selected papers
   URL={papers/icnp2001-red-pd.pdf},
   resource={<a href=talks/icnp2001-red-pd.pdf>ICNP talk</a>},
   acceptancerate={23},
+  pages={192-201},
+  citations={495},
+  pubtype={conference},
 }
 
 @misc{floyd2001pushback,
@@ -1330,7 +1623,8 @@ selected   :: Selected papers
   howpublished={Internet draft draft-floyd-pushback-messages-00.txt},
   year={2001},
   topics={resources ignore},
-  URL={papers/id2001-pushback-messages.txt}
+  URL={papers/id2001-pushback-messages.txt},
+  pubtype={other},
 }
 
 
@@ -1342,7 +1636,8 @@ selected   :: Selected papers
   howpublished={Unpblished report},
   year={2000},
   topics={wireless ignore},
-  URL={papers/wmac.pdf}
+  URL={papers/wmac.pdf},
+  pubtype={other},
 }
 
 @misc{mahajanakamai,
@@ -1351,7 +1646,8 @@ selected   :: Selected papers
   howpublished={Unpublished report},
   year={2000},
   URL={http://www.cs.washington.edu/homes/ratul/akamai.html},
-  topics={misc}
+  topics={misc ignore},
+  pubtype={other},
 }
 
 
